Mostly working w/Java 11